<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:imeOptions="actionDone"
            android:inputType="textFilter"
            android:singleLine="true"
            android:textColor="@color/text"
            android:layout_centerHorizontal="true"
            android:id="@+id/address_input"
            android:hint=" Address"
            android:background="@drawable/edittextstyle"
            android:layout_width="200dp"
            android:layout_height="40dp" />

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/address_input"
            android:id="@+id/arriving_panel"
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/text"
                android:layout_centerVertical="true"
                android:text="@string/arriving"
                android:textSize="16dp"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:buttonTint="@color/checkedTint"
                android:id="@+id/arriving"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/leaving_panel"
            android:layout_marginTop="-5dp"
            android:layout_below="@+id/arriving_panel"
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/text"
                android:layout_centerVertical="true"
                android:text="@string/leaving"
                android:textSize="16dp"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:buttonTint="@color/checkedTint"
                android:id="@+id/leaving"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <LinearLayout
            android:elevation="2dp"
            android:background="@color/backgroundGrey"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_below="@id/leaving_panel"
            android:id="@+id/days_panel"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:descendantFocusability="beforeDescendants"
                android:tag="@string/tagSunday"
                android:id="@+id/SundayLayout"
                android:elevation="5dp"
                android:background="@color/white"
                android:layout_width="35dp"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/text"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:text="@string/s"
                    android:textSize="28sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="1dp"
                android:descendantFocusability="beforeDescendants"
                android:tag="@string/tagMonday"
                android:id="@+id/MondayLayout"
                android:elevation="5dp"
                android:background="@color/white"
                android:layout_width="35dp"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/text"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:text="@string/m"
                    android:textSize="28sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="1dp"
                android:descendantFocusability="beforeDescendants"
                android:tag="@string/tagTuesday"
                android:id="@+id/TuesdayLayout"
                android:elevation="5dp"
                android:background="@color/white"
                android:layout_width="35dp"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/text"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:text="@string/t"
                    android:textSize="28sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="1dp"
                android:descendantFocusability="beforeDescendants"
                android:tag="@string/tagWednesday"
                android:id="@+id/WednesdayLayout"
                android:elevation="5dp"
                android:background="@color/white"
                android:layout_width="35dp"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/text"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:text="@string/w"
                    android:textSize="28sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="1dp"
                android:descendantFocusability="beforeDescendants"
                android:tag="@string/tagThursday"
                android:id="@+id/ThursdayLayout"
                android:elevation="5dp"
                android:background="@color/white"
                android:layout_width="35dp"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/text"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:text="@string/t"
                    android:textSize="28sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="1dp"
                android:descendantFocusability="beforeDescendants"
                android:tag="@string/tagFriday"
                android:id="@+id/FridayLayout"
                android:elevation="5dp"
                android:background="@color/white"
                android:layout_width="35dp"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/text"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:text="@string/f"
                    android:textSize="28sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="1dp"
                android:descendantFocusability="beforeDescendants"
                android:tag="@string/tagSaturday"
                android:id="@+id/SaturdayLayout"
                android:elevation="5dp"
                android:background="@color/white"
                android:layout_width="35dp"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/text"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:text="@string/s"
                    android:textSize="28sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/days_panel"
            android:id="@+id/sound_layout"
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/text"
                android:layout_centerVertical="true"
                android:text="@string/sound"
                android:layout_alignParentLeft="true"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:buttonTint="@color/checkedTint"
                android:id="@+id/sound"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="-5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sound_layout"
            android:id="@+id/vibration_layout"
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/text"
                android:textSize="16dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <CheckBox
                android:buttonTint="@color/checkedTint"
                android:layout_alignParentRight="true"
                android:id="@+id/vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>


        <RelativeLayout

            android:id="@+id/attach_layout"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20dp"
                android:id="@+id/attach_list_text"
                android:text="@string/attach_list_text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/attach_list_button"
                android:layout_marginLeft="10dp"
                android:background="@drawable/add_button"
                android:layout_toRightOf="@id/attach_list_text"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>



    </RelativeLayout>



</LinearLayout>