<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/title_activity_graphs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/colorPrimaryDark"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="1dp" />


        </RelativeLayout>


    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/buttonPanel"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:text="@string/day"
            android:id="@+id/day"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_alignTop="@+id/month"
            android:layout_toStartOf="@+id/month" />

        <Button
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:text="@string/month"
            android:id="@+id/month"
            android:background="@color/white"
            android:layout_marginTop="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:text="@string/year"
            android:id="@+id/year"
            android:background="@color/white"
            android:layout_alignTop="@+id/month"
            android:layout_toEndOf="@+id/month" />

    </RelativeLayout>


    <CheckBox
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gScratching"
        android:id="@+id/scratchingBox"
        android:checked="true"
        android:buttonTint="#146DE5"
        android:layout_below="@+id/graph"
        android:layout_alignStart="@+id/graph" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gReminders"
        android:id="@+id/remindersBox"
        android:checked="true"
        android:buttonTint="#12CEA2"
        android:layout_below="@+id/scratchingBox"
        android:layout_alignStart="@+id/scratchingBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gPollen"
        android:id="@+id/pollenBox"
        android:checked="true"
        android:buttonTint="#14E579"
        android:layout_above="@+id/remindersBox"
        android:layout_alignEnd="@+id/graph" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gTemperature"
        android:id="@+id/temperatureBox"
        android:checked="true"
        android:buttonTint="#1294CE"
        android:layout_below="@+id/pollenBox"
        android:layout_alignStart="@+id/pollenBox" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/graph"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/graph" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/temperatureLine"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/temperature_day" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/scratchingLine"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/scratching_day" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/pollenLine"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/pollen_day" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/remindersLine"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/reminders_day" />

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/nag_notifcations"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/alarm_black"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nag_weather"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/weather_black"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nag_lists"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/list_black"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nag_graphs"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/graph_white"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
